<?xml version="1.0"?>
<package>
  <name>decision_layer</name>
  <version>0.0.5</version>
  <description>ROS-Package that implements a costmap layer to add prohibited areas to the costmap-2D by a user configuration.</description>

  <maintainer email="taek111@yonsei.ac.kr">Takwon Ga</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/decision_layer</url> -->


  <author email="taek111@yonsei.ac.kr">Takwon Ga</author>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>


  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>

</package>
